# solray-audit

./: .gitignore  Cargo.toml  LICENSE  README.md  rules.toml  rules_evm.toml  rules_evm_regex.toml
examples/evm/: VulnerableVault.sol
src/: ast_analyzer.rs  evm_analyzer.rs  llm_analyzer.rs  main.rs  solana_tester.rs
