[package]
name = "solray-audit"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
# AST parsing
syn = { version = "2.0", features = ["full", "visit", "visit-mut"] }
quote = "1.0"
proc-macro2 = "1.0"
# HTTP client for LLM APIs
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
# Environment variables
dotenv = "0.15"
# Testing
tempfile = "3.0"
# Git operations for cloning Solana programs
git2 = "0.18"